<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- row 1 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <!-- row 1 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            android:padding="6dp"
            android:text="@string/current_parameters"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">

            <!-- col 1 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentPaceTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="--:--min/km"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/currentPacePB"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:indeterminate="false"
                    android:max="180"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:progress="0"
                    android:progressTint="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="0dp"
                    android:text="@string/pace"
                    android:textAlignment="center" />

            </LinearLayout>
            <!-- col 1 end -->
            <!-- col 2 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentCadenceTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="---"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp"
                    android:padding="0dp"
                    android:text="@string/cadence"
                    android:textAlignment="center" />

            </LinearLayout>
            <!-- col 2 end -->
            <!-- col 3 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentStepLengthTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/cm"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/currentStepLengthPB"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:max="100"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:progress="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="0dp"
                    android:text="@string/step_length"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <!-- row 1 end -->


        <!-- row 2 -->

        <ProgressBar
            android:id="@+id/progressBar10"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:progress="100" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:layout_marginBottom="3dp"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/average_parameters"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2
"
            android:baselineAligned="false">

            <!-- col 1 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="2dp"
                    android:text="--:--"
                    android:textAlignment="center"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
            <!-- col 1 end -->
            <!-- col 2 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distanceTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="2dp"
                    android:text="@string/km"
                    android:textAlignment="center"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="0dp"
                    android:text="@string/distance"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
            <!-- col 2 end -->
            <!-- col 3 -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">

            <!-- col 1 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/paceTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/min_km"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pacePB"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:indeterminate="false"
                    android:max="180"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:progress="0"
                    android:progressTint="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="0dp"
                    android:text="@string/pace"
                    android:textAlignment="center" />

            </LinearLayout>
            <!-- col 1 end -->
            <!-- col 2 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cadenceTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="---"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp"
                    android:padding="0dp"
                    android:text="@string/cadence"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- col 2 end -->
            <!-- col 3 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stepLengthTV"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/cm"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/stepLengthPB"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:progress="0"
                    android:progressTint="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="0dp"
                    android:text="@string/step_length"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
        <!-- col 3 end -->

    </LinearLayout>

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-3dp"
        android:background="@drawable/buttonshape"
        android:text="@string/stop_training"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/progressBar12"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:progress="100" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        tools:context=".StartActivity" />

    <!-- col 3 end -->

</LinearLayout>
